--- a/docker-lamp/www/registro.html
+++ b/docker-lamp/www/registro.html
@@ -14,7 +14,7 @@
             Direccion: <input type="text" name="user_address" id="user_address"><br>
             Teléfono: <input type="text" name="user_telf" id="user_telf"><br>
             NIF: <input type="text" name="user_nif" id="user_nif"><br>
-            Email: <input type="email" name="user_email" id="user_email"><br>
+            Email: <input type="text" name="user_email" id="user_email"><br>
 
 
             <input type="submit" value="Solicitar registro">
